@@ -1,6 +1,8 @@
 package gitlet;
 
 import java.io.File;
+import java.io.IOException;
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedList;
@@ -14,7 +16,7 @@ import static gitlet.Utils.*;
 /** Represents a gitlet repository.
  *  @author Zicheng Liang
  */
-public class Repository {
+public class Repository implements Serializable {
     /**
      *
      * List all instance variables of the Repository class here with a useful
@@ -26,16 +28,30 @@ public class Repository {
     public static final File CWD = new File(System.getProperty("user.dir"));
     /** The .gitlet directory. */
     public static final File GITLET_DIR = join(CWD, ".gitlet");
-    private Map<String, Branch> branches = new TreeMap<>();
-    private Commit head;
+    public static final File GITLET_OBJ = join(GITLET_DIR, "objects");
+    public static final File repoFile = new File(".gitlet/repo");
+    public static final File aStageArea = new File(".gitlet/aStaged");
+    public Map<String, Branch> branches = new TreeMap<>();
+    public Commit head;
+    public List<Tree> aStage = new LinkedList<>(); // this list is often modified
 
-    public void init() {
+    public void init() throws IOException {
         if (!GITLET_DIR.exists()) {
-            GITLET_DIR.mkdirs();
+            GITLET_OBJ.mkdirs();
+            // mkdirs also creates parent dirs, in this case including GITLET_DIR;
             branches.put("master", new Branch());
-            head = branches.get("master").commits.getFirst();
+            head = branches.get("master").commits.get(0);
         } else {
             System.err.println("A Gitlet version-control system already exists in the current directory.");
+        }
+
+        if (!repoFile.exists()) {
+            try {
+                repoFile.createNewFile();
+                Utils.writeObject(repoFile, this);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
@@ -75,5 +91,19 @@ public class Repository {
             Arrays.sort(files);
             return Arrays.asList(files);
         }
+    }
+
+    public void stage(Tree tree) throws IOException {
+        aStage.add(tree);
+        if (!aStageArea.exists()) {
+            aStageArea.createNewFile();
+        }
+        LinkedList<Tree> existingTree = Utils.readObject(aStageArea, LinkedList.class);
+        existingTree.add(tree);
+        Utils.writeObject(aStageArea, existingTree);
+    }
+
+    public void printLog() {
+        System.out.println(Utils.readContentsAsString(Utils.join(".gitlet", "logs")));
     }
 }
